--- a/Split/Views/Dashboard.xaml
+++ b/Split/Views/Dashboard.xaml
@@ -1,10 +1,11 @@
 ﻿<UserControl x:Class="Split.Views.Dashboard"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:prism="http://prismlibrary.com/"             
              xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
              prism:ViewModelLocator.AutoWireViewModel="True">
-    <Grid Margin="10" Background="White">
+    <Grid Margin="8" Background="White">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="200"/>
             <ColumnDefinition/>
@@ -18,46 +19,101 @@
             <StackPanel Grid.Row="0"
                             Margin="0,0,0,0"
                             Orientation="Horizontal">
-                <ComboBox Width="90">
-                    <ComboBoxItem Content="2024" />
-                    <ComboBoxItem Content="2025" IsSelected="True"/>
-                    <ComboBoxItem Content="2026" />
+                <ComboBox Width="90"                          
+                          ItemsSource="{Binding Years}"
+                          SelectedValue="{Binding SelectedYear}"
+                          SelectedItem="{Binding SelectedYear, Mode=TwoWay}">
+                    <i:Interaction.Triggers>
+                        <i:EventTrigger EventName="SelectionChanged">
+                            <prism:InvokeCommandAction 
+                            Command="{Binding YearSelectionChanged}" 
+                            TriggerParameterPath="AddedItems"/>
+                        </i:EventTrigger>
+                    </i:Interaction.Triggers>
                 </ComboBox>
-                <ComboBox Width="50">
-                    <ComboBoxItem Content="1" />
-                    <ComboBoxItem Content="2" />
-                    <ComboBoxItem Content="3" />
-                    <ComboBoxItem Content="4" />
-                    <ComboBoxItem Content="5" IsSelected="True"/>
-                    <ComboBoxItem Content="6" />
-                    <ComboBoxItem Content="7" />
-                    <ComboBoxItem Content="8" />
-                    <ComboBoxItem Content="9" />
-                    <ComboBoxItem Content="10" />
-                    <ComboBoxItem Content="11" />
-                    <ComboBoxItem Content="12" />
+                <ComboBox Width="50"
+                          ItemsSource="{Binding Months}"
+                          SelectedValue="{Binding SelectedMonth}"
+                          SelectedItem="{Binding SelectedMonth, Mode=TwoWay}">
+                    <i:Interaction.Triggers>
+                        <i:EventTrigger EventName="SelectionChanged">
+                            <prism:InvokeCommandAction 
+                            Command="{Binding MonthSelectionChanged}" 
+                            TriggerParameterPath="AddedItems"/>
+                        </i:EventTrigger>
+                    </i:Interaction.Triggers>
                 </ComboBox>
             </StackPanel>
             <ComboBox Grid.Row="1"
-                      Margin="0,0,0,4">
-                <ComboBoxItem Content="ネット システム" IsSelected="True"/>
-                <ComboBoxItem Content="シャープ事務機"/>
-                <ComboBoxItem Content="エコール"/>
+                      Margin="0,0,0,4"
+                      ItemsSource="{Binding Sections}"
+                      DisplayMemberPath="Name"
+                      SelectedValuePath="Code"
+                      SelectedValue="{Binding SelectedSectionCode}"
+                      SelectedItem="{Binding SelectedSection, Mode=TwoWay}">
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="SelectionChanged">
+                        <prism:InvokeCommandAction Command="{Binding SectionSelectionChanged}" />
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
             </ComboBox>
 
-            <ListBox Grid.Row="2">
-                <ListBoxItem Content="菅野完嗣"  IsSelected="True"/>
-                <ListBoxItem Content="元木敏" />
-                <ListBoxItem Content="菅原祐之" />
-
+            <ListBox Grid.Row="2"
+                     ItemsSource="{Binding Employees}"
+                     DisplayMemberPath="Name"
+                     SelectedValuePath="Code"
+                     SelectedValue="{Binding SelectedEmployeeCode}"
+                     SelectedItem="{Binding SelectedEmployee, Mode=TwoWay}">
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="SelectionChanged">
+                        <prism:InvokeCommandAction 
+                            Command="{Binding EmployeeSelectionChanged}" 
+                            TriggerParameterPath="AddedItems"/>
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
             </ListBox>
 
         </Grid>
         <Grid Grid.Column="1">
-            <TabControl>
+            <TabControl Margin="8,0,0,0">
                 <TabItem Header="売上">
-                    <DataGrid ItemsSource="{Binding ResultCollectionView}"
-                              AutoGenerateColumns="False">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="100"/>
+                            <RowDefinition />
+                        </Grid.RowDefinitions>
+                        <Grid Grid.Row="0">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="30"/>
+                                <RowDefinition Height="30"/>
+                                <RowDefinition />
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="50"/>
+                                <ColumnDefinition Width="100"/>
+                                <ColumnDefinition Width="50"/>
+                                <ColumnDefinition />
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Grid.Row="0" Grid.Column="0" 
+                                       VerticalAlignment="Center"
+                                       Text="目標"/>
+                            <TextBlock Grid.Row="0" Grid.Column="1" 
+                                       VerticalAlignment="Center"
+                                       TextAlignment="Right"
+                                       Text="{Binding CurrentSalesTarget ,StringFormat={}{0:N0}}"/>
+                            <TextBlock Grid.Row="1" Grid.Column="0" 
+                                       VerticalAlignment="Center"
+                                       Text="達成率"/>
+                            <TextBlock Grid.Row="1" Grid.Column="1" 
+                                       VerticalAlignment="Center"
+                                       TextAlignment="Right"
+                                       Text="{Binding CurrentProfitTarget ,StringFormat={}{0:N0}}"/>
+
+                        </Grid>
+                        
+                        <DataGrid Grid.Row="1" 
+                                  ItemsSource="{Binding ResultCollectionView}"
+                                  AutoGenerateColumns="False">
                         <DataGrid.Columns>
                             <DataGridTextColumn Header="日" Binding="{Binding Date}">
                                 <DataGridTextColumn.ElementStyle>
@@ -90,10 +146,42 @@
                             </DataGridTextColumn>
                         </DataGrid.Columns>
                     </DataGrid>
+                    </Grid>
                 </TabItem>
                 <TabItem Header="粗利">
-                    <DataGrid ItemsSource="{Binding ResultCollectionView}"
-                            AutoGenerateColumns="False">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="100"/>
+                            <RowDefinition />
+                        </Grid.RowDefinitions>
+                        <Grid Grid.Row="0">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="30"/>
+                                <RowDefinition Height="30"/>
+                                <RowDefinition />
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="100"/>
+                                <ColumnDefinition />
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Grid.Row="0" Grid.Column="0" 
+                                       VerticalAlignment="Center"
+                                       Text="目標"/>
+                            <TextBlock Grid.Row="0" Grid.Column="1" 
+                                       VerticalAlignment="Center"
+                                       Text="{Binding CurrentSalesTarget}"/>
+                            <TextBlock Grid.Row="1" Grid.Column="0" 
+                                       VerticalAlignment="Center"
+                                       Text="達成率"/>
+                            <TextBlock Grid.Row="1" Grid.Column="1" 
+                                       VerticalAlignment="Center"
+                                       Text="{Binding CurrentSalesTarget}"/>
+
+                        </Grid>
+
+                        <DataGrid Grid.Row="1" 
+                                  ItemsSource="{Binding ResultCollectionView}"
+                                  AutoGenerateColumns="False">
                         <DataGrid.Columns>
                             <DataGridTextColumn Header="日" Binding="{Binding Date}">
                                 <DataGridTextColumn.ElementStyle>
@@ -126,6 +214,8 @@
                             </DataGridTextColumn>
                         </DataGrid.Columns>
                     </DataGrid>
+                        
+                    </Grid>
                 </TabItem>
             </TabControl>
         </Grid>
