--- a/Finally/Views/MainWindow.xaml
+++ b/Finally/Views/MainWindow.xaml
@@ -1,10 +1,10 @@
-﻿<mah:MetroWindow x:Class="Split.Views.MainWindow"
+﻿<mah:MetroWindow x:Class="Finally.Views.MainWindow"
         xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:prism="http://prismlibrary.com/"
-        ResizeMode="CanMinimize"
         prism:ViewModelLocator.AutoWireViewModel="True"
+        ResizeMode="CanMinimize"
         WindowTransitionsEnabled="False"
         Title="{Binding Title}" Height="700" Width="1000" >
     <Grid>
